--- a/book.toml
+++ b/book.toml
@@ -3,15 +3,15 @@ authors = ["zjp <jiping_zhou@foxmail.com>"]
 language = "zh"
 multilingual = false
 src = "src"
-title = "book-name"
+title = "rust-note"
 
-[preprocessor.theme]
-pagetoc = true
-sidebar-width = "250px"
+# [preprocessor.theme]
+# pagetoc = true
+# sidebar-width = "180px"
 
 [output.html]
 default-theme = "ayu"
-git-repository-url = ""
+git-repository-url = "https://github.com/zjp-CN/rust-note"
 additional-css = ["theme/pagetoc.css"]
 additional-js = ["theme/pagetoc.js"]
 
